--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@ width="250" height="250" />
             <form action="#">
                 <h4 class="message">Kirim Pesan</h4>
                 <div class="form-group">
-                    <label for="email">First Name : </label>
+                    <label for="email">Nama Depan : </label>
                     <input type="email" class="form-control" id="email" placeholder="Masukkan nama depan ">
                 </div>
                 <div class="form-group">
-                    <label for="email">Last Name : </label>
+                    <label for="email">Nama Belakang : </label>
                     <input type="email" class="form-control" id="email" placeholder="masukkan nama belakang">
                 </div>
                 <div class="form-group">
